--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ variables:
   PROJECT_NAME: "BungaaPortfolio"
   PROJECT_DIR: "/data/$PROJECT_NAME"
   REMOTE_SERVER: "192.168.1.254"
+  SSH_COMMAND: "ssh $CT_USER@$REMOTE_SERVER"
 
 stages:
   - init
@@ -11,21 +12,24 @@ stages:
 
 
 .ssh_prepare: &ssh_prepare
+    - mkdir -p ~/.ssh && touch ~/.ssh/known_hosts
     - ssh-keygen -R $REMOTE_SERVER && ssh-keyscan $REMOTE_SERVER >> ~/.ssh/known_hosts
+    - eval "$(ssh-agent -s)" && ssh-add ~/.ssh/id_rsa
 
 .ct_prepare: &ct_prepare
     - echo "CT UPDATE && UPGRADE"
-    - ssh $CT_USER@$REMOTE_SERVER "sudo apt update && sudo apt -y upgrade && sudo apt autoremove"
+    - $SSH_COMMAND "sudo apt update && sudo apt -y upgrade && sudo apt -y autoremove"
     - echo "CT PYTHON3-PIP INSTALL"
-    - ssh $CT_USER@$REMOTE_SERVER "sudo apt -y install python3-pip python3.11-venv redis"
+    - $SSH_COMMAND "sudo apt -y install python3-pip python3.11-venv redis git"
     - echo "CREATING FOLDER IF NOT EXIST ON CT"
-    - ssh $CT_USER@$REMOTE_SERVER "mkdir -p $PROJECT_DIR"
+    - $SSH_COMMAND "mkdir -p $PROJECT_DIR"
     - echo "CREATING VENV ON CT"
-    - ssh $CT_USER@$REMOTE_SERVER "test -e $PROJECT_DIR/.venv || /usr/bin/python3 -m venv $PROJECT_DIR/.venv"
+    - $SSH_COMMAND "test -e $PROJECT_DIR/.venv || /usr/bin/python3 -m venv $PROJECT_DIR/.venv"
 
 .service_prepare: &service_prepare
     - echo "CREATING GUNICORN SERVICE"
-    - ssh $CT_USER@$REMOTE_SERVER "test -e /etc/systemd/system/gunicorn.service || echo \"\
+    - |
+        $SSH_COMMAND "sudo test -e /etc/systemd/system/gunicorn.service || sudo tee /etc/systemd/system/gunicorn.service > /dev/null << EOF
         [Unit]
         Description=gunicorn $PROJECT_NAME
         After=network.target
@@ -34,9 +38,11 @@ stages:
         WorkingDirectory=$PROJECT_DIR/
         ExecStart=$PROJECT_DIR/.venv/bin/gunicorn config.wsgi -c $PROJECT_DIR/config/gunicorn.conf.py
         [Install]
-        WantedBy=multi-user.target\" > /etc/systemd/system/gunicorn.service && \
-        echo \"RESTARTING SYSTEMD DAEMON\" && sudo systemctl daemon-reload && \
-        echo \"ENABLING GUNICORN SERVICE\" && sudo systemctl enable gunicorn.service"
+        WantedBy=multi-user.target\"
+        EOF" && echo "RESTARTING SYSTEMD DAEMON" && 
+        $SSH_COMMAND "sudo systemctl daemon-reload" && 
+        echo "ENABLING GUNICORN SERVICE" && 
+        $SSH_COMMAND "sudo systemctl enable gunicorn.service"
 
 .create_proxy: &create_proxy
     - echo "CHECKING IF PROXY IS CREATED"
@@ -44,33 +50,33 @@ stages:
 
 .update_script: &update_script
     - echo "SENDING LAST VERSION TO CT"
-    - /usr/bin/sftp $CT_USER@$REMOTE_SERVER:* $PROJECT_DIR
+    - /usr/bin/sftp $CT_USER@$REMOTE_SERVER:$PROJECT_DIR/ <<< $'put ./*'
     - echo "INSTALLING REQUIREMENTS TO CT"
     - ssh $CT_USER@$REMOTE_SERVER "$PROJECT_DIR/.venv/bin/pip install -r $PROJECT_DIR/requirements.txt"
 
 .django_pre: &django_pre
     - echo "MIGRATING LAST DB CHANGES"
-    - ssh $CT_USER@$REMOTE_SERVER "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py migrate"
+    - $SSH_COMMAND "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py migrate"
     - echo "COLLECTING DJANGO STATIC FILES"
-    - ssh $CT_USER@$REMOTE_SERVER "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py collectstatic --noinput"
+    - $SSH_COMMAND "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py collectstatic --noinput"
     - echo "ADDING EXPERIENCE TO DB"
-    - ssh $CT_USER@$REMOTE_SERVER "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py add_experience"
+    - $SSH_COMMAND "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py add_experience"
     - echo "ADDING SKILLS TO DB"
-    - ssh $CT_USER@$REMOTE_SERVER "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py add_skills"
+    - $SSH_COMMAND "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py add_skills"
 
 .restart_services: &restart_services
     - echo "RESTARTING GUNICORN"
-    - ssh $CT_USER@$REMOTE_SERVER "sudo systemctl restart gunicorn"
+    - $SSH_COMMAND "sudo systemctl restart gunicorn"
 
 .reset_db: &reset_db
     - echo "DELETING EXISTING DB"
-    - ssh $CT_USER@$REMOTE_SERVER "rm $PROJECT_DIR/db.sqlite3"
+    - $SSH_COMMAND "rm $PROJECT_DIR/db.sqlite3"
     - echo "MIGRATING LAST DB CHANGES"
-    - ssh $CT_USER@$REMOTE_SERVER "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py migrate"
+    - $SSH_COMMAND "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py migrate"
     - echo "ADDING EXPERIENCE TO DB"
-    - ssh $CT_USER@$REMOTE_SERVER "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py add_experience"
+    - $SSH_COMMAND "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py add_experience"
     - echo "ADDING SKILLS TO DB"
-    - ssh $CT_USER@$REMOTE_SERVER "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py add_skills"
+    - $SSH_COMMAND "$PROJECT_DIR/.venv/bin/python $PROJECT_DIR/manage.py add_skills"
 
 
 init_CT_job:
