fix: absolute path in service

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ stages:
         [Service]
         User=$CT_USER
         WorkingDirectory=$PROJECT_DIR/
-        ExecStart=.venv/bin/gunicorn config.wsgi -c config/gunicorn.conf.py
+        ExecStart=$PROJECT_DIR/.venv/bin/gunicorn config.wsgi -c $PROJECT_DIR/config/gunicorn.conf.py
         [Install]
         WantedBy=multi-user.target
         EOF" && 
