--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,17 @@ services:
       - /data/staticfiles:/data/staticfiles
       - /data/db:/data/db
     expose:
-      - "8000"
+      - "8080"
 
   nginx:
     image: nginx:latest
     container_name: nginx
     restart: always
     expose:
-      - "8000"
+      - "8080"
     ports:
       - "8000:8000"
     volumes:
-      - ./docker/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
       - /data/logs:/data/logs
       - /data/staticfiles:/data/staticfiles
