fix: added mkdir db folder

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,6 +140,8 @@ stages:
     - /usr/bin/sftp -r $CT_USER@$REMOTE_SERVER:$PROJECT_DIR/ <<< $'put ./*'
     - echo "INSTALLING REQUIREMENTS TO CT"
     - ssh $CT_USER@$REMOTE_SERVER "$PROJECT_DIR/.venv/bin/pip install -r $PROJECT_DIR/requirements.txt"
+    - echo "CREATING DB FOLDER"
+    - ssh $CT_USER@$REMOTE_SERVER "mkdir $PROJECT_DIR/db"
 
 .django_pre: &django_pre
     - echo "MIGRATING LAST DB CHANGES"
