--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,9 +84,9 @@ stages:
 
             location / {
               proxy_pass http://127.0.0.1:8080;
-              proxy_set_header Host $$host;
-              proxy_set_header X-Real-IP $$remote_addr;
-              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_set_header Host \$$host;
+              proxy_set_header X-Real-IP \$$remote_addr;
+              proxy_set_header X-Forwarded-For \$$proxy_add_x_forwarded_for;
             }
             location /staticfiles {
                 alias /data/staticfiles;
@@ -95,6 +95,8 @@ stages:
           }
         }
         EOF"
+    - echo "CREATING SOFT LINK TO SITES-ENABLED FOR PROXY CONFIG"
+    - $SSH_COMMAND "sudo ln -s /etc/nginx/sites-available/$PROJECT_NAME.conf /etc/nginx/sites-enabled/$PROJECT_NAME.conf"
     - echo "ENABLING AND STARTING NGINX SERVICE"
     - $SSH_COMMAND "sudo systemctl enable nginx"
     - $SSH_COMMAND "sudo systemctl restart nginx"
@@ -116,9 +118,9 @@ stages:
 
             location / {
               proxy_pass http://django:8080;
-              proxy_set_header Host $$host;
-              proxy_set_header X-Real-IP $$remote_addr;
-              proxy_set_header X-Forwarded-For $$proxy_add_x_forwarded_for;
+              proxy_set_header Host \$$host;
+              proxy_set_header X-Real-IP \$$remote_addr;
+              proxy_set_header X-Forwarded-For \$$proxy_add_x_forwarded_for;
             }
             location /staticfiles {
                 alias /data/staticfiles;
