--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,22 +70,6 @@ stages:
         $SSH_COMMAND "sudo systemctl enable gunicorn.service"
     - echo "CONFIGURING INTERNAL NGINX PROXY"
     - |
-        $SSH_COMMAND "tee /dev/null << EOF
-        \\$host
-        EOF"
-    - |
-        $SSH_COMMAND "tee /dev/null << EOF
-        \$host
-        EOF"
-    - |
-        $SSH_COMMAND "tee /dev/null << EOF
-        \\$$host
-        EOF"
-    - |
-        $SSH_COMMAND "tee /dev/null << EOF
-        \$$host
-        EOF"
-    - |
         $SSH_COMMAND "sudo test -e /etc/nginx/sites-available/$PROJECT_NAME.conf || sudo tee /etc/nginx/sites-available/$PROJECT_NAME.conf << EOF
         events {}
         http {
@@ -100,9 +84,9 @@ stages:
 
             location / {
               proxy_pass http://127.0.0.1:8080;
-              proxy_set_header Host \$host;
-              proxy_set_header X-Real-IP \$remote_addr;
-              proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+              proxy_set_header Host \\\$host;
+              proxy_set_header X-Real-IP \\\$remote_addr;
+              proxy_set_header X-Forwarded-For \\\$proxy_add_x_forwarded_for;
             }
             location /staticfiles {
                 alias /data/staticfiles;
@@ -134,9 +118,9 @@ stages:
 
             location / {
               proxy_pass http://django:8080;
-              proxy_set_header Host \$host;
-              proxy_set_header X-Real-IP \$remote_addr;
-              proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+              proxy_set_header Host \\\$host;
+              proxy_set_header X-Real-IP \\\$remote_addr;
+              proxy_set_header X-Forwarded-For \\\$proxy_add_x_forwarded_for;
             }
             location /staticfiles {
                 alias /data/staticfiles;
