--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,16 +79,15 @@ stages:
           access_log  /data/logs/nginx_access.log;
           error_log   /data/logs/nginx_error.log error;
 
-
+          location /staticfiles/ {
+              alias $PROJECT_DIR/staticfiles/;
+              autoindex on;
+          }
           location / {
             proxy_pass http://127.0.0.1:8080;
             proxy_set_header Host \\\$host;
             proxy_set_header X-Real-IP \\\$remote_addr;
             proxy_set_header X-Forwarded-For \\\$proxy_add_x_forwarded_for;
-          }
-          location /staticfiles {
-              alias /data/staticfiles;
-              autoindex on;
           }
         }
         EOF"
@@ -113,15 +112,15 @@ stages:
             error_log   /data/logs/nginx_error.log error;
 
 
+            location /staticfiles {
+                alias /data/staticfiles/;
+                autoindex on;
+            }
             location / {
               proxy_pass http://django:8080;
               proxy_set_header Host \\\$host;
               proxy_set_header X-Real-IP \\\$remote_addr;
               proxy_set_header X-Forwarded-For \\\$proxy_add_x_forwarded_for;
-            }
-            location /staticfiles {
-                alias /data/staticfiles;
-                autoindex on;
             }
           }
         }
